--- a/static/products.html
+++ b/static/products.html
@@ -12,6 +12,8 @@
     <nav>
      <a href="/static/index.html">Home</a>
     <a href="#" id="logoutBtn">Logout</a>
+    <a href="/static/cart.html">Cart</a>
+
     </nav>
   </header>
   <main>
